--- a/main.css
+++ b/main.css
@@ -14,3 +14,12 @@
     font-family: sans-serif;
     text-align: center;
 }
+
+.footer {
+    background: slategrey;
+    padding: 50px;
+    font-size: 32px;
+    font-family: sans-serif;
+    color: #fff;
+    text-align: center;
+}
